[package]
name = "lycoris"
version = "0.9.23"
description = "Lycoris is an offline voice memo"
authors = ["solaoi"]
license = "MIT"
repository = "https://github.com/solaoi/lycoris"
default-run = "lycoris"
edition = "2021"
rust-version = "1.80"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.8.1", features = ["api-all"] }
vosk = "0.2.0"
cpal = "0.14.1"
dasp = "0.11"
unicode-segmentation = "1.11.0"
once_cell = "1.19.0"
crossbeam-channel = "0.5.13"
chrono = "0.4.38"
hound = "3.5.1"
rusqlite = "*"
samplerate-rs = "0.1.0"
# download model and openai request
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.30"
# serve audio
urlencoding = "2.1.3"
# screencapturekit = "0.2.8"
# fix thread crash
# screencapturekit = { git = "https://github.com/doom-fish/screencapturekit-rs", rev = "8829f70"}
screencapturekit = { git = "https://github.com/solaoi/screencapturekit-rs" }
xcap = "0.0.14"
# permission
macos-accessibility-client = "0.0.1"
core-graphics = "0.24.0"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
ct2rs = { version = "0.9.4", features = ["accelerate"] }
# mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", rev = "32e8945", features = [
#     "metal",
# ] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", tag = "v0.3.2", features = [
    "metal",
] }
tauri-plugin-clipboard = "1.1.4"
sbv2_core = { version = "0.1.4", features = ["dynamic"] }
# whisper-rs = { version = "0.11.1", features = ["metal"] }
whisper-rs = { git = "https://github.com/tazz4843/whisper-rs.git", rev = "dd0c3af", features = ["metal"] }
sherpa-rs = "0.5.1"

[dependencies.tauri-plugin-sql]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"
features = ["sqlite"]
[dependencies.tauri-plugin-window-state]
git = "https://github.com/tauri-apps/plugins-workspace"
branch = "v1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
