[package]
name = "lycoris"
version = "0.9.35"
description = "Lycoris is an offline voice memo"
authors = ["solaoi"]
license = "MIT"
repository = "https://github.com/solaoi/lycoris"
default-run = "lycoris"
edition = "2021"
rust-version = "1.85"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [ "protocol-asset", "macos-private-api"] }
vosk = "0.2.0"
# cpal 0.15.3 has a bug that causes the app to crash on macOS with coreaudio-rs
cpal = "0.14.1"
dasp = "0.11"
unicode-segmentation = "1.12.0"
once_cell = "1.21.1"
crossbeam-channel = "0.5.15"
chrono = "0.4.40"
hound = "3.5.1"
rusqlite = "0.32.1"
samplerate-rs = "0.1.0"
# download model and openai request
reqwest = { version = "0.12", features = ["stream", "multipart", "json"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3.31"
# serve audio
urlencoding = "2.1.3"
screencapturekit = "0.3.5"
core-media-rs = "0.3.4"

xcap = "0.4.0"
# permission
macos-accessibility-client = "0.0.1"
core-graphics = "0.24.0"
objc2 = "0.6.0"
# ct2rs = { version = "0.9.7", features = ["accelerate"] }
ct2rs = { git = "https://github.com/jkawamoto/ctranslate2-rs", rev = "8a436a87701ae2df677e1dc918adaf2742445ac9", features = ["accelerate"] }
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs.git", tag = "v0.5.0", features = [
    "metal",
] }
tauri-plugin-clipboard = "2.1.11"
sbv2_core = { version = "0.1.4", features = ["dynamic"] }
ort = { version = "2.0.0-rc.6" }
ndarray = { version = "0.16", default-features = false }
whisper-rs = { version = "0.13.2", features = ["metal"] }
# sherpa-rs = "0.6.6"
sherpa-rs = { git = "https://github.com/solaoi/sherpa-rs", branch = "fix/minimum-cmake" }
mcp-sdk = { git="https://github.com/solaoi/mcp-sdk", rev="c7e06ce40156fbe23911379e48268eb9543f8acc" }
which = "7.0.2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
http-range = "0.1.5"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2"
[dependencies.tauri-plugin-window-state]
version = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
